--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ a<!DOCTYPE html>
     <body> 
 
         <div class="header">
-            <h1>Example Student's HCDE 439 Physical Computing Page!</h1>
+            <h1>Alison's HCDE 439 Physical Computing Page!</h1>
             <p>
-            <img src="red-panda.jpg" width=400></a>
+            <img src="alison.jpg" width=400></a>
             </p>
             <p>
             My name is Example Student! I'm an HCDE major and excited to learn the following things in this class: how to be a real student, and how to change my name.
