--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="alison.jpg" width=400></a>
             </p>
             <p>
-            My name is Example Student! I'm an HCDE major and excited to learn the following things in this class: how to be a real student, and how to change my name.
+            Hey, I'm Alison. I'm an HCDE student and I'm excited to learn how to make physical things work! I'm hoping to incorporate what I learn into this class into my personal art.  
             </p>
         </div>
         <div class="assignments">
