--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body> 
 
         <div class="header">
-            <h1>Alison's HCDE 439 Physical Computing Page!</h1>
+            <h1>Alison's HCDE 439 Physical Computing Page! 🌟</h1>
             <p>
             <img src="alison.jpg" width=400></a>
             </p>
