--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>Example Student's HCDE 439 Physical Computing Page!</title> 
+        <title>Alison's HCDE 439 Physical Computing Page! 🌟</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
@@ -24,9 +24,9 @@
 
             <div class="assignment">
               <a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
-                  <img src="red-panda.jpg" width=250></a>
+                  <img src="circuit.jpg" width=250></a>
                 <p>
-		Assignment 1 was a panda!
+		Assignment 1 was to make LEDs blink in a pattern!
                 </p>
             </div>
 
