--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <img src="alison.jpg" width=400></a>
             </p>
             <p>
-            Hey, I'm Alison. I'm an HCDE student and I'm excited to learn how to make physical things work! I'm hoping to incorporate what I learn into this class into my personal art.  
+            hi Hey, I'm Alison. I'm an HCDE student and I'm excited to learn how to make physical things work! I'm hoping to incorporate what I learn into this class into my personal art.  
             </p>
         </div>
         <div class="assignments">
 
             <div class="assignment">
               <a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
-                  <img src="circuit.jpg" width=250></a>
+                  <img src="circuit.JPG" width=250></a>
                 <p>
 		Assignment 1 was to make LEDs blink in a pattern!
                 </p>
