--- a/assignment1.html
+++ b/assignment1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
 
-        <title>E Alison's HCDE 439 Physical Computing Page! 🌟</title> 
+        <title>Alison's HCDE 439 Physical Computing Page! 🌟</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
 
@@ -18,6 +18,10 @@
             </p>
             <p>
             Here is all the documentation for assignment 1!
+            <img src="schematic.jpg" width=400></a>
+            this is my schematic!
+            <img src="code.jpg" width=400></a>
+            <img src="circuit.jpg" width=400></a>
             </p>
         </div>
         
