--- a/assignment1.html
+++ b/assignment1.html
@@ -18,10 +18,16 @@
             </p>
             <p>
             Here is all the documentation for assignment 1!
-            <img src="schematic.jpg" width=400></a>
+            </p>
+            <p>
+            <img src="schematic.JPG" width=400></a>
             this is my schematic!
+            </p>
+            <p>
             <img src="code.jpg" width=400></a>
-            <img src="circuit.jpg" width=400></a>
+            </p>
+            <p>
+            <img src="circuit.JPG" width=400></a>
             </p>
         </div>
         
