--- a/assignment1.html
+++ b/assignment1.html
@@ -7,6 +7,9 @@
         <title>Alison's HCDE 439 Physical Computing Page! 🌟</title> 
 
         <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
+        img {
+            image-orientation: from-image;
+        }
 
     </head> 
     <body> 
