--- a/assignment1.html
+++ b/assignment1.html
@@ -12,7 +12,7 @@
     <body> 
 
         <div class="header">
-            <h1>Example Student's Assignment 1!</h1>
+            <h1>Alison's Assignment 1!</h1>
             <p>
             <img src="circuit.gif" width=400></a>
             </p>
