--- a/assignment1.html
+++ b/assignment1.html
@@ -20,7 +20,7 @@
             Here is all the documentation for assignment 1!
             </p>
             <p>
-            <img src="schematic.JPG" width=400></a>
+            <img src="" width=400></a>
             this is my schematic!
             </p>
             <p>
