--- a/assignment1.html
+++ b/assignment1.html
@@ -21,13 +21,21 @@
             </p>
             <p>
             <img src="schematic.JPG" width=400></a>
-            this is my schematic!
+            <p>
+            This is my schematic! I chose to use 220 ohm resistors for 3 out of the 4 LEDs because those three are red, yellow, and green, and have a lower voltage drop. I have one blue LED, in which I used a 100 ohm resistor because it has a higher voltage drop. 
+            <p>
             </p>
             <p>
             <img src="code.jpg" width=400></a>
             </p>
             <p>
+            This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
+            </p>
+            <p>
             <img src="circuit.JPG" width=400></a>
+            </p>
+            <p>
+            And finally, here's a plain picture of my circuit. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <"https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <"http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
             </p>
         </div>
         
