--- a/assignment1.html
+++ b/assignment1.html
@@ -26,7 +26,7 @@
             <p>
             </p>
             <p>
-            <img src="code.jpg" width=400></a>
+            <img src="code.jpg" width=800></a>
             </p>
             <p>
             This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
@@ -35,7 +35,7 @@
             <img src="circuit.JPG" width=400></a>
             </p>
             <p>
-            And finally, here's a plain picture of my circuit. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <"https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <"http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
+            And finally, here's a plain picture of my circuit. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
             </p>
         </div>
         
