--- a/assignment1.html
+++ b/assignment1.html
@@ -14,9 +14,6 @@
         <div class="header">
             <h1>Alison's Assignment 1!</h1>
             <p>
-            <img src="circuit.gif" width=400></a>
-            </p>
-            <p>
             Here is all the documentation for assignment 1!
             </p>
             <p>
@@ -35,8 +32,13 @@
             <img src="circuit.JPG" width=400></a>
             </p>
             <p>
-            And finally, here's a plain picture of my circuit. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
+            This is a picture of my circuit. 
             </p>
+            <p>
+            <img src="circuit.gif" width=400></a>
+            </p>
+            <p>
+            And finally, here's a gif of my circuits operation. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
         </div>
         
     </body>
