--- a/assignment1.html
+++ b/assignment1.html
@@ -16,6 +16,7 @@
             <p>
             Here is all the documentation for assignment 1!
             </p>
+            <h2> Schematic </h2>
             <p>
             <img src="schematic.JPG" width=400></a>
             <p>
