--- a/assignment1.html
+++ b/assignment1.html
@@ -23,17 +23,19 @@
             This is my schematic! I chose to use 220 ohm resistors for 3 out of the 4 LEDs because those three are red, yellow, and green, and have a lower voltage drop. I have one blue LED, in which I used a 100 ohm resistor because it has a higher voltage drop. 
             <p>
             </p>
+            <h2> Code </h2>
             <p>
             <img src="code.jpg" width=800></a>
             </p>
             <p>
             This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
             </p>
+            <h2> Circuit </h2>
             <p>
             <img src="circuit.JPG" width=400></a>
             </p>
             <p>
-            This is a picture of my circuit. 
+            This is a picture of my circuit! 
             </p>
             <p>
             <img src="circuit.gif" width=400></a>
