--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
             <div class="assignment">
               <a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
-                  <img src="red-panda.jpg" width=250></a>
+                  <img src="assign2gif.gif" width=250></a>
                 <p>
-		Assignment 2 was a panda!
+		Assignment 2 was to create a circuit with LEDs and a pushbutton!
                 </p>
             </div>
 	</div>
