--- a/assignment2.html
+++ b/assignment2.html
@@ -18,30 +18,30 @@
             </p>
             <h2> Schematic </h2>
             <p>
-            <img src="assign2schematic.JPG" width=400></a>
+            <img src="assign2schematic.jpg" width=400></a>
             <p>
-            This is my schematic! I chose to use 330 ohm resistors for the RBG LED to be conservative as to not blow out the LED. For red I originally calculated 2V = .02 * R, where R = 100 ohms and green and blue 3.2V = .02 * R, R = 160 ohms, however, when I used 100 and 220 resistors (closest I had to 160), the LED was very bright and hard to look at so I bumped all the resistors up to 300 ohm. 
+            This is my schematic! I chose to use a 10k ohm resistor for the button because that seems to be the standard for pushbuttons (according to the internet it preserves longevity of the button and reduces static). Next, I chose to use 330 ohm resistors for the RBG LED to be conservative as to not blow out the LED. For red I originally calculated 2V = .02 * R, where R = 100 ohms and green and blue 3.2V = .02 * R, R = 160 ohms, however, when I used 100 and 220 resistors (closest I had to 160), the LED was very bright and hard to look at so I bumped all the resistors up to 300 ohm. 
             <p>
             </p>
             <h2> Code </h2>
             <p>
-            <img src="code.jpg" width=800></a>
+            <img src="assign2code.png" width=800></a>
             </p>
             <p>
-            This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
+            This is my code. It works by telling the button to wait for input, and when it gets input, it fades the RGB LED through a variety of colors before turning off.  
             </p>
             <h2> Circuit </h2>
             <p>
-            <img src="circuit.JPG" width=400></a>
+            <img src="assign2pic.JPG" width=400></a>
             </p>
             <p>
             This is a picture of my circuit! 
             </p>
             <p>
-            <img src="circuit.gif" width=400></a>
+            <img src="assign2gif.gif" width=400></a>
             </p>
             <p>
-            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
+            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to use pushbottons and RGB LEDs, <a href="https://learn.sparkfun.com/tutorials/sik-experiment-guide-for-arduino---v32/experiment-3-driving-an-rgb-led">this</a> tutorial on wiring RBG LEDs, and <a href="https://www.instructables.com/id/Fading-RGB-LED-Arduino/">this</a> tutorial on fading an RBG LED, and <a href="https://create.arduino.cc/projecthub/55895/how-to-turn-rgb-led-on-0dc2c5">this</a> tutorial on RGB LEDs and pushbuttons.
         </div>
         
     </body>
