--- a/assignment2.html
+++ b/assignment2.html
@@ -20,7 +20,7 @@
             <p>
             <img src="assign2schematic.jpg" width=400></a>
             <p>
-            This is my schematic! I chose to use a 10k ohm resistor for the button because that seems to be the standard for pushbuttons (according to the internet it preserves longevity of the button and reduces static). Next, I chose to use 330 ohm resistors for the RBG LED to be conservative as to not blow out the LED. For red I originally calculated 2V = .02 * R, where R = 100 ohms and green and blue 3.2V = .02 * R, R = 160 ohms, however, when I used 100 and 220 resistors (closest I had to 160), the LED was very bright and hard to look at so I bumped all the resistors up to 300 ohm. 
+            This is my schematic! I chose to use a 10k ohm resistor for the button because that seems to be the standard for pushbuttons (according to the internet it preserves longevity of the button and reduces static). Next, I chose to use 330 ohm resistors for the RBG LED to be conservative as to not blow out the LED. For red I originally calculated 2V = .02 * R, where R = 100 ohms and green and blue 3.2V = .02 * R, R = 160 ohms, however, when I used 100 and 220 resistors (closest I had to 160), the LED was very bright and hard for my phone camera to pick up so I bumped all the resistors up to 330 ohm. 
             <p>
             </p>
             <h2> Code </h2>
