--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 		Assignment 2 was to create a circuit with LEDs and a pushbutton!
                 </p>
             </div>
+	    <div class="assignment">
+              <a href="assignment3.html"><h2>Assignment 3: Input Output!</h2>
+                  <img src="a3.gif" width=250></a>
+                <p>
+		Assignment 3 was to use a sensor (I chose photoresistor) to change the state of an LED!
+                </p>
+            </div>		
 	</div>
     </body>
 </html>
