--- a/assignment3.html
+++ b/assignment3.html
@@ -41,7 +41,7 @@
             <img src="a3.gif" width=400></a>
             </p>
             <p>
-            And finally, here's a gif of my circuit's operation. I use my hand to cover the photoresistor to simulate darkness, because I couldn't hold the camera and also get up and turn the lights on and off. I couldn't have done this assignment without the help of TJ and Gina in class, <a href="https://learn.sparkfun.com/nt-3-driving-an-rgb-led">this</a> tutorial on wiring RBG LEDs and <a href="https://www.instructables.com/id/Arduino-Photoresistor-LED-onoff/">this</a> tutorial on using photoresistors.
+            And finally, here's a gif of my circuit's operation. I use my hand to cover the photoresistor to simulate darkness, because I couldn't hold the camera and also get up and turn the lights on and off. I couldn't have done this assignment without the help of TJ and Gina in class and <a href="https://www.instructables.com/id/Arduino-Photoresistor-LED-onoff/">this</a> tutorial on using photoresistors.
             <p>
             </p>
             <p>
