--- a/assignment3.html
+++ b/assignment3.html
@@ -25,7 +25,7 @@
             </p>
             <h2> Code </h2>
             <p>
-            <img src="a3code.png" width=400></a>
+            <img src="a3code2.png" width=400></a>
             </p>
             <p>
             This is my code. It works by constantly checking the photoresistor to see what the level of light in the environment is. If it's low enough, it turns on the LED. If the room brightens, then the LED turns off. 
