--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 <p>
 		Assignment 3 was to use a sensor (I chose photoresistor) to change the state of an LED!
                 </p>
+            </div>
+	    <div class="assignment">
+              <a href="final.html"><h2>Final Project: Skateboard Speedometer!</h2>
+                  <img src="dog.jpg" width=250></a>
+                <p>
+		My final project is to create a skateboard speedometer.
+                </p>
             </div>		
 	</div>
     </body>
