--- a/final.html
+++ b/final.html
@@ -18,7 +18,7 @@
             </p>
             <h2> Initial Sketch </h2>
             <p>
-            <img src="initfinalsketch" width=400></a>
+            <img src="initfinalsketch.jpg" width=400></a>
             <p>
             This is my initial sketch. My idea for my final project is a skateboard speedometer. I can build it with mostly things in my kit, however, I do need to buy switch magnetic reeds. 
             <p>
