--- a/index.html
+++ b/index.html
@@ -45,12 +45,19 @@
                 </p>
             </div>
 	    <div class="assignment">
+              <a href="assignment4.html"><h2>Assignment 4: Higher Voltages + Transistors!</h2>
+                  <img src="dog.jpg" width=250></a>
+                <p>
+		For my Assignment 4, I created a servo motor fan that is controlled by a remote. 
+                </p>
+            </div>
+		<div class="assignment">
               <a href="final.html"><h2>Final Project: Skateboard Speedometer!</h2>
                   <img src="dog.jpg" width=250></a>
                 <p>
 		My final project is to create a skateboard speedometer.
                 </p>
-            </div>		
+            </div>	
 	</div>
     </body>
 </html>
