--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="assignments">
 
             <div class="assignment">
-              <a href="assignment1.html"><h2>Assignment 1: Blink!</h2>
+              <a href="assignment1.html"><h2>A1: Blink!</h2>
                   <img src="circuit.gif" width=250></a>
                 <p>
 		Assignment 1 was to make LEDs blink in a pattern!
@@ -31,21 +31,21 @@
             </div>
 
             <div class="assignment">
-              <a href="assignment2.html"><h2>Assignment 2: Fade!</h2>
+              <a href="assignment2.html"><h2>A2: Fade!</h2>
                   <img src="assign2gif.gif" width=250></a>
                 <p>
 		Assignment 2 was to create a circuit with LEDs and a pushbutton!
                 </p>
             </div>
 	    <div class="assignment">
-              <a href="assignment3.html"><h2>Assignment 3: Input Output!</h2>
+              <a href="assignment3.html"><h2>A3: Input Output!</h2>
                   <img src="a3.gif" width=250></a>
                 <p>
 		Assignment 3 was to use a sensor (I chose photoresistor) to change the state of an LED!
                 </p>
             </div>
 	    <div class="assignment">
-              <a href="assignment4.html"><h2>Assignment 4: Higher Voltages + Transistors!</h2>
+              <a href="assignment4.html"><h2>A4: Higher Voltages + Transistors!</h2>
                   <img src="dog.jpg" width=250></a>
                 <p>
 		For my Assignment 4, I created a servo motor fan that is controlled by a remote. 
