--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             </div>
 	    <div class="assignment">
               <a href="assignment4.html"><h2>A4: Higher Voltages + Transistors!</h2>
-                  <img src="dog.jpg" width=250></a>
+                  <img src="a4.gif" width=250></a>
                 <p>
-		For my Assignment 4, I created a servo motor fan that is controlled by a remote. 
+		For my Assignment 4, I created an LED strip that is controlled by a remote. 
                 </p>
             </div>
 		<div class="assignment">
