--- a/assignment4.html
+++ b/assignment4.html
@@ -12,33 +12,33 @@
     <body> 
 
         <div class="header">
-            <h1>Alison's Assignment 4:  Higher Voltage + Transistors!</h1>
+            <h1>Alison's Assignment 4: Higher Voltage + Transistors!</h1>
             <p>
             Here is all the documentation for assignment 4!
             </p>
             <h2> Schematic </h2>
             <p>
-            <img src="schematic.JPG" width=400></a>
+            <img src="a4schem.JPG" width=400></a>
             <p>
-            This is my schematic! I chose to use 220 ohm resistors for 3 out of the 4 LEDs because those three are red, yellow, and green, and have a lower voltage drop. I have one blue LED, in which I used a 100 ohm resistor because it has a higher voltage drop. 
+            This is my schematic! According to the internet, MOFSET transistors can handle 30amps and 120V. We are only connecting it to 9V, and using a load (the LED Strip) to create resistance. 
             <p>
             </p>
             <h2> Code </h2>
             <p>
-            <img src="code.jpg" width=800></a>
+            <img src="code.png" width=800></a>
             </p>
             <p>
             This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
             </p>
             <h2> Circuit </h2>
             <p>
-            <img src="circuit.JPG" width=400></a>
+            <img src="a4pic.JPG" width=400></a>
             </p>
             <p>
             This is a picture of my circuit! 
             </p>
             <p>
-            <img src="circuit.gif" width=400></a>
+            <img src="a4.gif" width=400></a>
             </p>
             <p>
             And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
