--- a/assignment4.html
+++ b/assignment4.html
@@ -28,7 +28,7 @@
             <img src="code.png" width=800></a>
             </p>
             <p>
-            This is my code. Each pin is connected to a different LED, and it works by separately telling each pin to turn on, wait for a second, and turn off. This creates the ordered blinking effect. 
+            This is my code. It works by having the reciever wait for the #1 button to be pressed, and if the LED's are off, it turns them on, and if they're on, it turns them off. Part of my code is copied from lecture slides (the stuff for remotes).  
             </p>
             <h2> Circuit </h2>
             <p>
@@ -41,8 +41,8 @@
             <img src="a4.gif" width=400></a>
             </p>
             <p>
-            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ and Gina in class in figuring out how to create a circuit for a singular blinking LED, <a href="https://www.youtube.com/watch?v=iidi2wE8gok">this</a> youtube tutorial on creating multiple blinking LEDS, and <a href="http://www.techdose.com/electronics/Wiring-Multiple-LEDs/226/page3.html">this</a> schematic example.
+            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ in class in figuring out how to use remotes and Jasper helping us setup the LED strip/servo motor in class! 
         </div>
-        
+  
     </body>
 </html>
