--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 		For my Assignment 4, I created an LED strip that is controlled by a remote. 
                 </p>
             </div>
+	    <div class="assignment">
+              <a href="assignment5.html"><h2>A5: Talking to the web!</h2>
+                  <img src="a5.gif" width=250></a>
+                <p>
+		For my Assignment 5, I created a webpage that has a circle whose size and color are controlled by buttons! 
+                </p>
+            </div>
 		<div class="assignment">
               <a href="final.html"><h2>Final Project: Skateboard Speedometer!</h2>
                   <img src="dog.jpg" width=250></a>
