--- a/assignment5.html
+++ b/assignment5.html
@@ -12,37 +12,41 @@
     <body> 
 
         <div class="header">
-            <h1>Alison's Assignment 5: Higher Voltage + Transistors!</h1>
+            <h1>Alison's Assignment 5: Talking to the web!</h1>
             <p>
-            Here is all the documentation for assignment 4!
+            Here is all the documentation for assignment 5!
             </p>
             <h2> Schematic </h2>
             <p>
-            <img src="a4schem.JPG" width=400></a>
+            <img src="a5schem.JPG" width=400></a>
             <p>
-            This is my schematic! According to the internet, MOFSET transistors can handle 30amps and 120V. We are only connecting it to 9V, and using a load (the LED Strip) to create resistance. 
+            This is my schematic! I used 10K ohm resistors because those are the standard for buttons.
             <p>
             </p>
             <h2> Code </h2>
             <p>
-            <img src="code.png" width=800></a>
+            <img src="a5code2.png" width=800></a>
             </p>
             <p>
-            This is my code. It works by having the reciever wait for the #1 button to be pressed, and if the LED's are off, it turns them on, and if they're on, it turns them off. Part of my code is copied from lecture slides (the stuff for remotes).  
+            This is my arduino code for the circuit. It is relatively simple, it looks for inputs from the two buttons and then transforms them into strings that can be read by sketch.js.
+            </p>
+            <img src="a5code1.png" width=800></a>
+            </p>
+            <p>
+            This is the segment of the sketch.js that I edited. If button1 is pressed, it makes the size of the ellipse bigger by increasing x and y, and if button 2 is pressed, it generates new random numbers for the rgb values of the ellipse's fill.
             </p>
             <h2> Circuit </h2>
             <p>
-            <img src="a4pic.JPG" width=400></a>
+            <img src="a5circuit.JPG" width=400></a>
             </p>
             <p>
             This is a picture of my circuit! 
             </p>
             <p>
-            <img src="a4.gif" width=400></a>
+            <img src="a5.gif" width=400></a>
             </p>
             <p>
-            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of TJ in class in figuring out how to use remotes and Jasper helping us setup the LED strip/servo motor in class! 
+            And finally, here's a gif of my circuit's operation. I couldn't have done this assignment without the help of Jasper and prof Nadya in class! My p5 code is an edited version of the code that was supplied to us.
         </div>
-  
     </body>
 </html>
