--- a/assignment5.html
+++ b/assignment5.html
@@ -18,7 +18,7 @@
             </p>
             <h2> Schematic </h2>
             <p>
-            <img src="a5schem.JPG" width=400></a>
+            <img src="a5schem.png" width=400></a>
             <p>
             This is my schematic! I used 10K ohm resistors because those are the standard for buttons.
             <p>
