--- a/final.html
+++ b/final.html
@@ -18,11 +18,13 @@
             </p>
             <h2> Initial Sketch </h2>
             <p>
-            <img src="sk8.jpg" width=400></a>
+            <img src="finalplan.JPG" width=400></a>
             <p>
-            This is my initial sketch. My idea for my final project is a skateboard speedometer. I can build it with mostly things in my kit, however, I do need to buy switch magnetic reeds. 
+            This is my initial sketches, it has a bill of materials, sketch, and circuit.
             <p>
+            To build this project I will need: a soil moisture sensor, a 9V batter, a battery hookup, my elegoo uno, a breadboard, jumper wires, an LCD display, a plant, and some sort of housing for the electronics which I will either lasercut or 3d print.
             </p>
+        
     </div>
         
     </body>
