--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             </div>
 		<div class="assignment">
               <a href="final.html"><h2>Final Project: Skateboard Speedometer!</h2>
-                  <img src="dog.jpg" width=250></a>
+                  <img src="plant.jpg" width=250></a>
                 <p>
-		My final project is to create a skateboard speedometer.
+		My final project is to create a device that tells you when your plant needs to be watered. 
                 </p>
             </div>	
 	</div>
