--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </p>
             </div>
 		<div class="assignment">
-              <a href="final.html"><h2>Final Project: Skateboard Speedometer!</h2>
+              <a href="final.html"><h2>Final Project: Plant Moisture Sensor!</h2>
                   <img src="plant.jpg" width=250></a>
                 <p>
 		My final project is to create a device that tells you when your plant needs to be watered. 
