--- a/final.html
+++ b/final.html
@@ -18,7 +18,7 @@
             </p>
             <h2> Initial Sketch </h2>
             <p>
-            <img src="finalplan.JPG" width=400></a>
+            <img src="finalplan.png" width=400></a>
             <p>
             This is my initial sketches, it has a bill of materials, sketch, and circuit.
             <p>
