--- a/final.html
+++ b/final.html
@@ -20,7 +20,7 @@
             <p>
             <img src="finalplan.png" width=400></a>
             <p>
-            This is my initial sketches, it has a bill of materials, sketch, and circuit.
+            This is my initial sketch, it has a bill of materials, sketch, and circuit. This product will detect plant moisture and output to an LCD screen whether a plant needs to be watered.
             <p>
             To build this project I will need: a soil moisture sensor, a 9V batter, a battery hookup, my elegoo uno, a breadboard, jumper wires, an LCD display, a plant, and some sort of housing for the electronics which I will either lasercut or 3d print.
             </p>
