--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 		For my Assignment 5, I created a webpage that has a circle whose size and color are controlled by buttons! 
                 </p>
             </div>
+	    <div class="assignment">
+              <a href="assignment6.html"><h2>A5: The web talks back!</h2>
+                  <img src="a5.gif" width=250></a>
+                <p>
+		For my Assignment 6, I created a webpage that has a graph controlled by a joystick, and an LED that changes brightness when a computer key is hit.
+                </p>
+            </div>
 		<div class="assignment">
               <a href="final.html"><h2>Final Project: Plant Moisture Sensor!</h2>
                   <img src="plant.jpg" width=250></a>
