--- a/final.html
+++ b/final.html
@@ -18,11 +18,11 @@
             </p>
             <h2> Initial Sketch </h2>
             <p>
-            <img src="finalplan.png" width=400></a>
+            <img src="circuitfinal.JPG" width=400></a>
             <p>
-            This is my initial sketch, it has a bill of materials, sketch, and circuit. This product will detect plant moisture and output to an LCD screen whether a plant needs to be watered.
+            This is my initial sketch, it has a bill of materials, sketch, and circuit. This product will detect plant moisture and blink an LED when the plant needs to be watered. 
             <p>
-            To build this project I will need: a soil moisture sensor, a 9V batter, a battery hookup, my elegoo uno, a breadboard, jumper wires, an LCD display, a plant, and some sort of housing for the electronics which I will either lasercut or 3d print.
+            To build this project I will need: a soil moisture sensor, a 9v battery, a battery hookup, an arduino uno, a prototype shield, wires, a 330 ohm resistor, and a blue LED. I chose to use a 330 ohm resistor for the blue LED, despite technically being able to use a 100 ohm one, because it is too bright and messes with my phone camera. Calculation: (5-3.3 = 20(10^-3)*R, R=85) 
             </p>
         
     </div>
