--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
 		<div class="assignment">
               <a href="final.html"><h2>Final Project: Plant Moisture Sensor!</h2>
-                  <img src="plant.jpg" width=250></a>
+                  <img src="finalgif.gif" width=250></a>
                 <p>
 		My final project is to create a device that tells you when your plant needs to be watered. 
                 </p>
