--- a/final.html
+++ b/final.html
@@ -38,13 +38,38 @@
             <img src="finalcircuit.JPG" width=400></a>
             </p>
             <p>
-            This is a picture of my circuit! The first picture is of the circuit itself, and the second is of it in it's housing. The shield is placed on tope of the prototype, and the moisture sensor is connected to power, ground, and A0. The negative end of the LED is soldered to the resistor, and the resistor is soldered to ground.The positive end is connected to pin 9. Finally, a 9V battery is plugged into the arduino. It is placed inside a small cardboard box, with two holes: one for the LED, and one for the moisture sensor, which needs to be in the soil. 
+            This is a picture of my circuit! The first picture is of the circuit itself, and the second is of it in it's housing. 
+            </p>
+            <h2> Technical Writeup </h2>
+            <p>
+            In order to implement this product, you must do the following steps:
+            1. Build the prototype using the arduino
+            2. Program the ardunio and upload code.
+            3. Build housing for and put circuit into housing. 
+            </p>  
+            <p>
+            <b> Building the Prototype </b>
+            In order to build the ardunio, you will need a soil moisture sensor, a 9v battery, a battery hookup, an arduino uno, a prototype shield, wires, a 330 ohm resistor, and a blue LED. 
+            </p>
+            <p>
+            NOTE: It is a good idea to test your circuitry on a breadboard to verify it works before soldering. 
+            </p>
+            <p>
+            First, place the shield on top of the arduino. Connect the moisture sensor to power and ground on the + and - pins, and to A0 on the s pin. Solder the negative (shorter) end of the LED to your resistor, and solder that resistor to a wire. Solder the end of the wire to ground on the shield. Then, solder the positive (longer) side of the LED to a wire, and put that wire in pin 9. 
+            </p>
+            <p>
+            <b> Programming the arduino </b>
+            Connect your arduino to your computer and upload the code provided. Verify that it works by connecting the battery and testing it on various soils. It should blink whenever the sensor is in dry soil.
+            </p>
+            <p>
+            <b> Housing the circuit </b>
+            Once your circuit is built and functioning, build a small box out of cardboard taking the measurements of your circuit into consideration. There are many templates and tutorials on the internet one can consult to do this. Cut two small holes in the top of the box for the sensor and LED to go through. Put the circuitry in the box and thread the LED and sensor through. Connect the battery and put sensor in plant and you're all set!
             </p>
             <p>
             <img src="finalgif.gif" width=250></a>
             </p>
             <p>
-                And finally, here's a gif of my circuit's operation, and <a href = ""> here </a> is a link to my demo video. I couldn't have done this assignment without the help of Jasper in learning how to solder, code is partially copied from <a href = "https://create.arduino.cc/projecthub/electropeak/complete-guide-to-use-soil-moisture-sensor-w-examples-756b1f"> this </a> site.
+             And finally, here's a gif of my circuit's operation, and <a href = ""> here </a> is a link to my demo video. I couldn't have done this assignment without the help of Jasper in learning how to solder, code is partially copied from <a href = "https://create.arduino.cc/projecthub/electropeak/complete-guide-to-use-soil-moisture-sensor-w-examples-756b1f"> this </a> site.
         </div>
     </body>
 </html>
