--- a/final.html
+++ b/final.html
@@ -43,8 +43,8 @@
             <h2> Technical Writeup </h2>
             <p>
             In order to implement this product, you must do the following steps:
-            1. Build the prototype using the arduino
-            2. Program the ardunio and upload code.
+            1. Build the prototype using the arduino, 
+            2. Program the ardunio and upload code, and
             3. Build housing for and put circuit into housing. 
             </p>  
             <p>
