--- a/final.html
+++ b/final.html
@@ -44,7 +44,7 @@
             <img src="finalgif.gif" width=250></a>
             </p>
             <p>
-             And finally, here's a gif of my circuit's operation, and <a href = ""> here </a> is a link to my demo video. I couldn't have done this assignment without the help of Jasper in learning how to solder, code is partially copied from <a href = "https://create.arduino.cc/projecthub/electropeak/complete-guide-to-use-soil-moisture-sensor-w-examples-756b1f"> this </a> site.
+             And finally, here's a gif of my circuit's operation, and <a href = "https://youtu.be/mL4POHJWK5s"> here </a> is a link to my demo video. I couldn't have done this assignment without the help of Jasper in learning how to solder, code is partially copied from <a href = "https://create.arduino.cc/projecthub/electropeak/complete-guide-to-use-soil-moisture-sensor-w-examples-756b1f"> this </a> site.
             <h2> Technical Writeup </h2>
             <p>
             In order to implement this product, you must do the following steps:
